<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/undo"
            android:icon="@drawable/ic_undo"
            android:title="Item 1"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/redo"
            android:title="Item 2"
            android:icon="@drawable/ic_redo"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/item3"
            android:title="Android"
            android:icon="@drawable/ic_more_vert"
            app:showAsAction="always">

            <menu xmlns:app="http://schemas.android.com/apk/res-auto">
                <group android:id="@+id/first_group" android:checkableBehavior="none">
                    <item android:id="@+id/save_image" android:title="@string/save_picture" android:icon="@drawable/ic_save" />
                    <item android:id="@+id/import_image" android:title="@string/import_picture" android:icon="@drawable/ic_export" />
                    <item android:id="@+id/export_image" android:title="@string/export_picture" android:icon="@drawable/ic_import" />
                </group>

                <item android:id="@+id/first" android:title="first" />
                <item android:id="@+id/second" android:title="second" />

                <!--                <group android:id="@+id/second_group" android:checkableBehavior="none" >-->
<!--                    <item android:id="@+id/first" android:title="first" />-->
<!--                    <item android:id="@+id/second" android:title="second" />-->
<!--                </group>-->
            </menu>
        </item>
</menu>