<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/settings_view"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_view">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <RadioButton
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/russian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian" />
        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/set_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.426" />


    <!--    <RelativeLayout-->
<!--        android:id="@+id/showlangdialog"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@color/lng_background"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/settings_view">-->

<!--        <TextView-->
<!--            android:id="@+id/dialog_language"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:dropDownVerticalOffset="35dp"-->
<!--            android:gravity="center"-->
<!--            android:popupBackground="@color/colorPrimary"-->
<!--            android:text="@string/english"-->
<!--            android:textColor="@color/white" />-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:src="@drawable/ic_arrow_dropdown" />-->

<!--    </RelativeLayout>-->


<!--    <RadioGroup-->
<!--        android:id="@+id/languages"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/settings_view">-->

<!--        <RadioButton-->
<!--            android:id="@+id/english"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/english" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/russian"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/russian" />-->
<!--    </RadioGroup>-->

<!--    <Button-->
<!--        android:id="@+id/btn_open"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="sometext"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/settings_view"-->
<!--        app:layout_constraintVertical_bias="0.437" />-->

</androidx.constraintlayout.widget.ConstraintLayout>